package com.sm;

public enum Status {
    ATIVA,
    CANCELADA
}
